--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,11 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~3.1.1"
+    "jquery": "~3.1.1",
+    "materialize": "^0.99.0",
+    "bootstrap-material-design": "^4.0.2"
+  },
+  "devDependencies": {
+    "jquery": "^3.2.1"
   }
 }
