--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "dev": "place nodemon in here",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
@@ -14,12 +15,67 @@
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-bump": "*",
+    "grunt-closure-compiler": "*",
+    "grunt-concurrent": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-compress": "1.3.0",
     "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-cssc": "*",
+    "grunt-easy-rpm": "*",
+    "grunt-exec": "*",
+    "grunt-gitinfo": "^0.1.8",
+    "grunt-htmlhint": "*",
+    "grunt-jsbeautifier": "*",
+    "grunt-npm-install": "^0.2.0",
+    "grunt-regex-replace": "*",
+    "grunt-remove-logging": "*",
+    "grunt-rename": "*",
+    "grunt-rsync-2": "*",
+    "grunt-sass": "*",
+    "grunt-shell": "*",
+    "grunt-strip-css-comments": "*",
+    "grunt-stripcomments": "*",
+    "grunt-timer": "*",
     "jest": "18.1.0",
-    "react-test-renderer": "15.4.2"
+    "jshint-stylish": "*",
+    "jspm": "^0.16.53",
+    "matchdep": "*",
+    "react-test-renderer": "15.4.2",
+    "shelljs": "^0.5.1",
+    "time-grunt": "^1.2.1"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "src/www"
+    },
+    "dependencies": {
+      "bootstrap": "github:twbs/bootstrap@^3.3.7",
+      "bootstrap-material-design": "npm:bootstrap-material-design@^0.5.10",
+      "css": "github:systemjs/plugin-css@^0.1.35",
+      "jquery": "npm:jquery@^3.2.1",
+      "json": "github:systemjs/plugin-json@^0.3.0",
+      "kendo-ui": "github:kendo-labs/bower-kendo-ui@^2017.1.411",
+      "lightbox": "npm:lightbox@^0.5.0",
+      "lodash": "npm:lodash@^4.17.4",
+      "materialize": "npm:materialize@^1.0.0",
+      "popper": "npm:popper@^1.0.0",
+      "text": "github:systemjs/plugin-text@^0.0.11"
+    },
+    "devDependencies": {
+      "traceur": "github:jmcriffey/bower-traceur@0.0.93",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.93"
+    }
   }
 }
