--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-"presets": ["react-native","es2015","react"]
+"presets": ["react-native","es2015","stage-0","react"],
+"plugins": ["react-hot-loader/babel"]
 }
