--- a/package.json
+++ b/package.json
@@ -4,17 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "place nodemon in here",
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "startServer": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "webpack-dev-server --hot --inline",
     "test": "jest"
   },
   "dependencies": {
     "bootstrap-material-design": "^4.0.0-beta.3",
+    "firebase": "^4.5.0",
     "jquery": "^3.2.1",
     "material-design-lite": "^1.3.0",
+    "muicss": "^0.9.27",
     "path": "^0.12.7",
-    "react": "15.4.2",
-    "react-dom": "^15.6.1",
-    "react-native": "0.40.0"
+    "react": "^16.2.0",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^16.2.0",
+    "react-jsonschema-form": "^1.0.0",
+    "react-komposer": "^2.0.0",
+    "react-modal": "^3.1.6",
+    "react-native": "0.40.0",
+    "react-object-fit-cover": "^1.0.0",
+    "react-portal": "^4.0.0",
+    "react-portal-2": "^2.2.4",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -64,10 +79,14 @@
     "imagemin-webpack-plugin": "^1.5.2",
     "jest": "18.1.0",
     "jshint-stylish": "*",
+    "json-server": "^0.12.1",
     "jspm": "^0.16.53",
     "matchdep": "*",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "15.4.2",
     "resolve-url-loader": "^2.1.0",
     "rxjs": "^5.4.3",
