--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "bootstrap-material-design": "^4.0.0-beta.3",
+    "create-react-class": "^15.6.2",
     "firebase": "^4.5.0",
     "jquery": "^3.2.1",
+    "material-auto-rotating-carousel": "^1.7.0",
     "material-design-lite": "^1.3.0",
+    "material-ui-dots": "^1.2.1",
     "muicss": "^0.9.27",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.2.0",
+    "react-drawer": "^1.2.5",
     "react-jsonschema-form": "^1.0.0",
     "react-komposer": "^2.0.0",
     "react-modal": "^3.1.6",
     "react-native": "0.40.0",
     "react-object-fit-cover": "^1.0.0",
+    "react-permissions": "^1.0.5",
     "react-portal": "^4.0.0",
     "react-portal-2": "^2.2.4",
     "react-redux": "^5.0.6",
+    "react-sidebar": "^2.3.2",
+    "react-spark-scroll-gsap": "^4.0.0",
+    "react-swipeable-views": "^0.12.12",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3",
@@ -43,6 +51,7 @@
     "bootstrap-loader": "^2.2.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
+    "extended-define-webpack-plugin": "^0.1.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "grunt": "~0.4.0",
