--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "place nodemon in here",
     "startServer": "node node_modules/react-native/local-cli/cli.js start",
     "start": "webpack-dev-server --hot --inline",
+    "lint-fix": "eslint src/** src/**/** --fix; exit 0",
     "test": "jest"
   },
   "dependencies": {
@@ -22,10 +23,13 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.2.0",
     "react-drawer": "^1.2.5",
+    "react-grid-layout": "^0.16.6",
+    "react-inlinesvg": "^0.7.5",
     "react-jsonschema-form": "^1.0.0",
     "react-komposer": "^2.0.0",
     "react-modal": "^3.1.6",
     "react-native": "0.40.0",
+    "react-native-google-drive-api-wrapper": "^1.1.1",
     "react-object-fit-cover": "^1.0.0",
     "react-permissions": "^1.0.5",
     "react-portal": "^4.0.0",
@@ -37,10 +41,13 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3",
-    "whatwg-fetch": "^2.0.3"
+    "webpack-node-externals": "^1.7.2",
+    "whatwg-fetch": "^2.0.3",
+    "xstate": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.5",
     "babel-jest": "18.0.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -51,6 +58,8 @@
     "bootstrap-loader": "^2.2.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
     "extended-define-webpack-plugin": "^0.1.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
